--- a/manifest.json
+++ b/manifest.json
@@ -4,25 +4,22 @@
   "description": "Error de etecsa en el calculo de horas.",
   "manifest_version":2,
   "icons": {
-     "16": "icon.png",
-     "48": "icon.png",
-     "128": "icon.png"
-            },
+     "16": "icon16.png",
+     "48": "icon48.png",
+     "128": "icon128.png"
+  },
   "browser_action": {
     "default_title": "Fix Etecsa",
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
   "permissions": [
-    "https://www.portal.nauta.cu/",
-    "https://www.portal.nauta.cu/user/login",
-    "http://*/*", 
-    "https://*/*"
+    "https://www.portal.nauta.cu/*"
   ],
   "content_scripts": [
   {
-    "matches": ["http://*/*", "https://*/*"],
-	"js": ["jquery.min.js","content.js"]
+    "matches": ["https://www.portal.nauta.cu/*"],
+	  "js": ["jquery.min.js","content.js"]
 	}
   ],
   "background": {
